# opengl-c

./: CMakeLists.txt
src/: main.c
